tests/fail/validity/uninit_integer.stderr
error: Undefined Behavior: using uninitialized data, but this operation requires initialized memory
  --> $DIR/uninit_integer.rs:LL:CC
   |
LL |     let _val = unsafe { std::mem::MaybeUninit::<usize>::uninit().assume_init() };
   |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ using uninitialized data, but this operation requires initialized memory
   |
   = help: this indicates a bug in the program: it performed an invalid operation, and caused Undefined Behavior
   = help: see https://doc.rust-lang.org/nightly/reference/behavior-considered-undefined.html for further information
   = note: backtrace:
   = note: inside `main` at $DIR/uninit_integer.rs:LL:CC

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

